Assess_ethics now writes to benchmarks/results/ Moved existing test results to benchmarks/results.

--- a/assess_ethics.ipynb
+++ b/assess_ethics.ipynb
@@ -11,7 +11,44 @@
      "output_type": "stream",
      "text": [
       "0 / 30\n",
-      " running accuracy=1.0\n"
+      " running accuracy=1.0\n",
+      " running accuracy=0.5\n",
+      " running accuracy=0.6666666666666666\n",
+      " running accuracy=0.5\n",
+      " running accuracy=0.6\n",
+      "5 / 30\n",
+      " running accuracy=0.6666666666666666\n",
+      " running accuracy=0.7142857142857143\n",
+      " running accuracy=0.625\n",
+      " running accuracy=0.6666666666666666\n",
+      " running accuracy=0.7\n",
+      "10 / 30\n",
+      " running accuracy=0.6363636363636364\n",
+      " running accuracy=0.5833333333333334\n",
+      " running accuracy=0.6153846153846154\n",
+      " running accuracy=0.6428571428571429\n",
+      " running accuracy=0.6\n",
+      "15 / 30\n",
+      " running accuracy=0.625\n",
+      " running accuracy=0.6470588235294118\n",
+      " running accuracy=0.6111111111111112\n",
+      " running accuracy=0.5789473684210527\n",
+      " running accuracy=0.55\n",
+      "20 / 30\n",
+      " running accuracy=0.5714285714285714\n",
+      " running accuracy=0.5909090909090909\n",
+      " running accuracy=0.5652173913043478\n",
+      " running accuracy=0.5416666666666666\n",
+      " running accuracy=0.56\n",
+      "25 / 30\n",
+      " running accuracy=0.5769230769230769\n",
+      " running accuracy=0.5555555555555556\n",
+      " running accuracy=0.5357142857142857\n",
+      " running accuracy=0.5517241379310345\n",
+      " running accuracy=0.5333333333333333\n",
+      "30 / 30\n",
+      " running accuracy=0.5483870967741935\n",
+      " running accuracy=0.53125\n"
      ]
     }
    ],
@@ -105,7 +142,7 @@
     "        amplified = \"base\"\n",
     "        if amplification:\n",
     "            amplified = \"amplified\"\n",
-    "        with open(f'{task_name}_{agent_name}_{amplified}.json', 'w') as f:\n",
+    "        with open(f'benchmarks/results/{task_name}_{agent_name}_{amplified}.json', 'w') as f:\n",
     "            json.dump(result, f,indent=4)\n",
     "        if index > task_count:\n",
     "            break\n",
