Updated compare_ethics to write benchmarks/results and to use the same prompt as the standard approach.

--- a/compare_ethics.ipynb
+++ b/compare_ethics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0427d40c",
    "metadata": {},
    "outputs": [
@@ -10,82 +10,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/bensturgeon/miniconda3/envs/ice_env/lib/python3.9/site-packages/fvalues/f.py:85: NoSourceAvailableWarning: Couldn't get source node of F() call\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "0\n",
       "2\n",
       "1\n",
-      "1\n",
+      "2\n",
       "2\n",
       "1\n",
       "3\n",
       "1\n",
-      "4\n",
-      "1\n",
-      "5\n",
-      "1\n",
-      "6\n",
-      "1\n",
-      "7\n",
-      "1\n",
-      "8\n",
-      "1\n",
-      "9\n",
-      "1\n",
-      "10\n",
-      "1\n",
-      "11\n",
-      "1\n",
-      "12\n",
-      "1\n",
-      "13\n",
-      "1\n",
-      "14\n",
-      "1\n",
-      "15\n",
-      "1\n",
-      "16\n",
-      "1\n",
-      "17\n",
-      "1\n",
-      "18\n",
-      "1\n",
-      "19\n",
-      "1\n",
-      "20\n",
-      "1\n",
-      "21\n",
-      "1\n",
-      "22\n",
-      "1\n",
-      "23\n",
-      "1\n",
-      "24\n",
-      "1\n",
-      "25\n",
-      "1\n",
-      "26\n",
-      "1\n",
-      "27\n",
-      "1\n",
-      "28\n",
-      "1\n",
-      "29\n",
-      "1\n",
-      "30\n",
-      "1\n"
+      "4\n"
      ]
     }
    ],
@@ -167,8 +100,9 @@
     "    \"\"\"\n",
     "    Generate an answer using the factored cognition approach\n",
     "    \"\"\"\n",
-    "    \n",
-    "    return answer\n",
+    "    prompt = make_scenario_prompt(question)\n",
+    "    factored_answer, subs = await answer_by_amplification(prompt, engine=agent_name)\n",
+    "    return factored_answer, subs\n",
     "\n",
     "async def evaluate_tasks(task_name, agent_name, task_count):\n",
     "    task_path = os.path.join('/Users/bensturgeon/werk/ice/benchmarks/', task_name)\n",
@@ -178,15 +112,14 @@
     "    evaluations = []\n",
     "    result = {}\n",
     "\n",
-    "    model = RecipeModel(agent_name=agent_name)\n",
-    "\n",
     "    for index, row in enumerate(task_data):\n",
-    "        print(index)\n",
+    "        if index %5 == 0:\n",
+    "            print(f\"{index} / {task_count}\")\n",
     "        scenario = row['text']\n",
     "\n",
     "        # Generate answers using both approaches\n",
     "        standard_answer = await get_standard_answer(scenario, agent_name)\n",
-    "        factored_answer, subs = await answer_by_amplification(scenario, engine=agent_name)\n",
+    "        factored_answer, subs = await get_factored_answer(scenario, agent_name)\n",
     "\n",
     "        # Evaluate the answers\n",
     "        evaluation_model = RecipeModel(agent_name=\"gpt-4\")\n",
@@ -204,31 +137,26 @@
     "\n",
     "        total_questions += 1\n",
     "\n",
+    "\n",
+    "\n",
+    "        result['evaluations'] = evaluations\n",
+    "\n",
+    "        # Save the results to a file\n",
+    "        task_name_no_extension = task_name.split(\".csv\")[0]\n",
+    "        with open(f'benchmarks/results/{task_name_no_extension}_{agent_name}_evaluations.json', 'w') as f:\n",
+    "            json.dump(result, f, indent=4)\n",
+    "\n",
     "        if index >= task_count:\n",
     "            break\n",
-    "\n",
-    "    result['evaluations'] = evaluations\n",
-    "\n",
-    "    # Save the results to a file\n",
-    "    task_name_no_extension = task_name.split(\".csv\")[0]\n",
-    "    with open(f'{task_name_no_extension}_{agent_name}_evaluations.json', 'w') as f:\n",
-    "        json.dump(result, f, indent=4)\n",
     "\n",
     "    return evaluations\n",
     "\n",
     "\n",
-    "\n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "if __name__ == \"__main__\":\n",
-    "    agent_name = \"chatgpt\"\n",
+    "    agent_name = \"instruct\"\n",
     "    model = RecipeModel(agent_name=agent_name)\n",
     "    # accuracy, answers = await evaluate_task('ethics_suite.jsonl', model, agent_name, 300)\n",
-    "    evaluations = await evaluate_tasks(\"ethics_suite.jsonl\",agent_name, 30)\n",
+    "    evaluations = await evaluate_tasks(\"ethics_suite.jsonl\",agent_name, 15)\n",
     "\n",
     "\n",
     "    \n",
