Included comparison results in compare_ethics.ipynb outputs.

--- a/compare_ethics.ipynb
+++ b/compare_ethics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0427d40c",
    "metadata": {},
    "outputs": [
@@ -10,15 +10,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "2\n",
-      "1\n",
-      "2\n",
-      "2\n",
-      "1\n",
-      "3\n",
-      "1\n",
-      "4\n"
+      "0 / 15\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/bensturgeon/miniconda3/envs/ice_env/lib/python3.9/site-packages/fvalues/f.py:85: NoSourceAvailableWarning: Couldn't get source node of F() call\n",
+      "  warnings.warn(\n",
+      "/Users/bensturgeon/miniconda3/envs/ice_env/lib/python3.9/site-packages/fvalues/f.py:85: NoSourceAvailableWarning: Couldn't get source node of F() call\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 / 15\n",
+      "10 / 15\n"
      ]
     }
    ],
@@ -112,6 +122,13 @@
     "    evaluations = []\n",
     "    result = {}\n",
     "\n",
+    "    \n",
+    "    result[\"count_factored\"] = 0\n",
+    "    result[\"count_baseline\"] = 0\n",
+    "    result[\"count_total\"] = 0\n",
+    "    result[\"count_undecided\"] = 0\n",
+    "\n",
+    "\n",
     "    for index, row in enumerate(task_data):\n",
     "        if index %5 == 0:\n",
     "            print(f\"{index} / {task_count}\")\n",
@@ -125,9 +142,19 @@
     "        evaluation_model = RecipeModel(agent_name=\"gpt-4\")\n",
     "        evaluation_prompt= generate_evaluation_prompt(scenario, standard_answer, factored_answer)\n",
     "        evaluation_result = await evaluation_model.generate_text(evaluation_prompt)\n",
-    "        print(evaluation_result)\n",
+    "        \n",
+    "        if evaluation_result == \"2\":\n",
+    "            result[\"count_factored\"] +=1\n",
+    "        elif evaluation_result == \"1\":\n",
+    "            result[\"count_baseline\"] +=1\n",
+    "        elif evaluation_result == \"0\":\n",
+    "            result[\"count_undecided\"] +=1\n",
+    "        else:\n",
+    "            \n",
+    "            print(\"Invalid output from evaluator.\")\n",
     "        # Store the results\n",
     "        evaluations.append({\n",
+    "            'sample_number': index+1,\n",
     "            'input': scenario,\n",
     "            'standard_answer': standard_answer,\n",
     "            'factored_answer': factored_answer,\n",
@@ -141,6 +168,11 @@
     "\n",
     "        result['evaluations'] = evaluations\n",
     "\n",
+    "        result[\"factored_percentage\"] = result[\"count_factored\"]/(index +1)\n",
+    "        result[\"baseline_percentage\"] = result[\"count_baseline\"]/(index +1)\n",
+    "\n",
+    "\n",
+    "\n",
     "        # Save the results to a file\n",
     "        task_name_no_extension = task_name.split(\".csv\")[0]\n",
     "        with open(f'benchmarks/results/{task_name_no_extension}_{agent_name}_evaluations.json', 'w') as f:\n",
@@ -148,15 +180,16 @@
     "\n",
     "        if index >= task_count:\n",
     "            break\n",
+    "    \n",
     "\n",
-    "    return evaluations\n",
+    "    del evaluations\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    agent_name = \"instruct\"\n",
+    "    agent_name = \"claude\"\n",
     "    model = RecipeModel(agent_name=agent_name)\n",
     "    # accuracy, answers = await evaluate_task('ethics_suite.jsonl', model, agent_name, 300)\n",
-    "    evaluations = await evaluate_tasks(\"ethics_suite.jsonl\",agent_name, 15)\n",
+    "    await evaluate_tasks(\"ethics_suite.jsonl\",agent_name, 15)\n",
     "\n",
     "\n",
     "    \n",
